--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Chat App
 on:
   push:
     branches:
-      - main  # 当推送到 main 分支时触发
+      - main  # 监听 main 分支的推送事件
 
 jobs:
   deploy:
@@ -25,8 +25,9 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./ # 部署当前项目的根目录
+          publish_branch: gh-pages # 部署到 gh-pages 分支
+          publish_dir: ./          # 部署当前项目的根目录
 
-      # 环境变量：将 API Key 注入环境
+      # 设置环境变量
       - name: Set OpenAI API Key
         run: echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> $GITHUB_ENV
